# aws-agente

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ESTRATEGIA_DESCOBERTA.md  ESTRUTURA_FINAL.md  GITHUB_CONFIG.md  GIT_FINALIZADO.md  LICENSE  Makefile  README.md  REORGANIZACAO_CONCLUIDA.md  install.sh  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
assets/: README.md
assets/html/: demo_page.html  index.html
config/: default.yaml  logging.yaml  security.yaml
docs/: README.md  SECURITY.md
docs/guides/: PROJETO_CONCLUIDO.md  PROJETO_GITHUB_READY.md  README_OLD.md  RELATORIO_TESTE_MARCOS.md  STRUCTURE.md
examples/advanced/: advanced_usage.py
examples/basic/: basic_usage.py
scripts/: README.md
scripts/demo/: demo.py  final_demo.py  serve_demo.py  upload_demo_page.py  upload_demo_simple.py
scripts/maintenance/: RESUMO_FINAL.py  o_que_ele_realmente_faz.py  prepare_for_github.py
scripts/utilities/: configure_public_access.py  create_s3_website.py  relatorio_s3_marcos.py  website_summary.py
security/: security-checklist.md
security/audits/: audit.py
security/compliance/: compliance_check.py
security/configs/: alerts.yaml  audit.yaml  encryption.yaml
security/tools/: configure_security.py  demo_security.py
src/aws_agent/: __init__.py
src/aws_agent/cli/: __init__.py  main.py
src/aws_agent/core/: __init__.py  account_manager.py  agent.py  config.py
src/aws_agent/services/: __init__.py  base.py  ec2.py  iam.py  lambda_service.py  s3.py
src/aws_agent/utils/: __init__.py  helpers.py
tests/: conftest.py
tests/integration/: __init__.py  test_agent_marcos.py  test_detailed_permissions.py  test_permissions.py  test_s3_cli.py
tests/src/: boto3.py  yaml.py
tests/src/botocore/: exceptions.py
tests/unit/: __init__.py  test_core.py  test_services.py
